--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: Sway Test
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,6 +22,7 @@ dependencies:
   sensors: 0.4.0+1
   path_provider: ^1.0.0
   open_file: ^2.0.1+2
+  charts_flutter: ^0.6.0
 
 
 
